# Spiral-Matrix-Filling

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
.cache/clangd/index/: filling.c.2480EF9A8CA7C385.idx  filling.h.056431B50220ADB4.idx  generate.c.1E62E77A1D3E0B13.idx  generate.h.8A41852F084C324E.idx  main.c.CA6B3B9C7D1C5FDC.idx  output.c.C9C9921C9EB094F9.idx  output.h.1E9F8DE4B02576EC.idx
include/: filling.h  generate.h  output.h
src/: filling.c  generate.c  main.c  output.c
